Design and Evaluation correction

--- a/Final Documentation/Design/Design.tex
+++ b/Final Documentation/Design/Design.tex
@@ -198,7 +198,8 @@ The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}, Fi
 \begin{enumerate}
 	\item {\textbf{Load}: During first time load of the application, the controller instantiates all the wrapper classes and calls the appropriate method (\texttt{initiateSynchronisationDialogue()}) to initialize the bx tool after receiving the initialization command from the view. After receiving the request, bx tool wrapper class sends the initialization signal (\texttt{setSrc(), integrateForward()}) to the bx tool i.e., eMoflon and the tool gets initialized by creating the instances of the \texttt{Source} and \texttt{Target} models. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}.}
 	
-	\item {\textbf{Delta Propagation (without continuation)}: After converting the delta sent from the view into example specific data, controller calls the appropriate method (\texttt{performAndPropagateTargetEdit(SrcData)}) of the wrapper class e.g., propagate delta into source model. Accordingly, wrapper class initiate forward synchronization (\texttt{setChangeSrc(SrcData), integrateForward()}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed and the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in the upper part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}.}
+	\item {\textbf{Delta Propagation (without continuation)}: After converting the delta sent from the view into example specific data, controller calls the appropriate method (\texttt{performAnd PropagateTargetEdit(SrcData)}) of the wrapper class e.g., propagate delta into source model. Accordingly, wrapper class initiate forward synchronization 
+	(\texttt{setChange Src(SrcData), integrateForward()}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed and the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in the upper part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}.}
 	
 	\item {\textbf{Delta Propagation (with continuation)}: While the bx tool i.e., eMoflon processes the delta, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation exists, the controller requests (\texttt{getChoices()}) for the matching rules from the bx tool i.e., eMoflon through the bx tool wrapper class. The wrapper class requests, receives the matching rules from the bx tool, and send it back to the controller. On receiving the user's decision, the controller sends resume data processing signal (\texttt{continueSynchronisation(userChoice)}) along with the user's decision to the bx tool through the wrapper class. Afterward, the bx tool completes the data processing with the user's decision. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in the lower part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Model(cont-true)}.}
 \end{enumerate}
@@ -305,13 +306,13 @@ The controller is mainly responsible for event/action handling and manages the r
 \end{figure}
 
 \paragraph{Sub-Components}
-Figure~\ref{fig:Component_Diagram-Controller} describes the architecture of the controller in the form of a component diagram. In my case, controller consists of two sub-components, \texttt{Servlet} and an \texttt{Adapter}.
+Figure~\ref{fig:Component_Diagram-Controller} describes the architecture of the controller in the form of a component diagram. In my case, controller consists of two sub-components, \texttt{Servlet} and an example specific adapter i.e., \texttt{KitchenAdapter}.
 
 Servlet is a technology which provides a component-based, platform-independent method for building Web-based applications \cite{servlet}. Servlet is built on Java platform to extend the capabilities of a web server which makes it robust and scalable. It resides inside a web server to generate dynamic content.
 
 Servlet is capable of handling all kinds of client-server protocol but popularly and mostly used with the HTTP, the HyperText Transfer Protocol. A web container is essentially required to run a servlet. A web container is a component of the web server that interacts with the servlets and manages the lifecycle of servlets. In my case, I am using \textit{Apache Tomcat} as my web container. Please refer Appendix for more information about servlet lifecycle.
 
-In my application, the servlet is strongly coupled with an adapter i.e., a Java class. The adapter is responsible for the conversion between UI data and bx tool specific data.
+In my application, the servlet is strongly coupled with an example specific adapter (kitchenadapter) i.e., a Java class. The adapter is responsible for the conversion between UI data and example specific data.
 
 \begin{figure}
 	\centering
@@ -337,13 +338,13 @@ In my application, the servlet is strongly coupled with an adapter i.e., a Java 
 \paragraph{Workflow}
 Figure~\ref{fig:Sequence_Diagram-Controller(init)}, 
 Figure~\ref{fig:Sequence_Diagram-Controller(cont-false)},
-and Figure~\ref{fig:Sequence_Diagram-Controller(cont-true)} illustrate the workflow of the Demon-BX tool from the point of view of the controller component in different stages. As the controller component communicates with both the view and model, these sequence diagrams show the communication process between the view, model and the sub-components of the controller, \texttt{Servlet} and the \texttt{Adapter}.
+and Figure~\ref{fig:Sequence_Diagram-Controller(cont-true)} illustrate the workflow of the Demon-BX tool from the point of view of the controller component in different stages. As the controller component communicates with both the view and model, these sequence diagrams show the communication process between the view, model and the sub-components of the controller, \texttt{Servlet} and the \texttt{KitchenAdapter}.
 
 \begin{enumerate}
 	\item {\textbf{Load}: During first time load of the application, the servlet receives an initialization command (\texttt{init(GUID)}) from the view along with the newly generated GUID for the user in the form of \texttt{JSON} data wrapped inside an \texttt{Ajax} call. After receiving the request, the servlet creates a new instance of the adapter and stores the GUID. Then, the servlet forwards the initialization request (\texttt{initeMoflonTool()}) to the adapter. The adapter instantiates the bx tool i.e., eMoflon tool (\texttt{initiateSynchronisationDialogue()}) and the tool gets initialized by creating the instances of the \texttt{Source} and \texttt{Target} models. Afterward, servlet requests 
 	(\texttt{getUImodels()}) for the newly generated models through the adapter. The adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the example specific models from the model, receives it, converts it to the UI specific data, and send it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(init)}.}
 		
-	\item {\textbf{Delta Propagation (without continuation)}: After the synchronization button is pressed, view sends (\texttt{propagateChanges(GUID, delta)}) the delta created along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the servlet wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the servlet handles the GUID (checks its existence) and forwards (\texttt{getUIModelsAfterAtomicDeltaPropagation(changeData)}) the delta wrapped inside a \texttt{ChangeData} class to the adapter. After converting the delta into example specific data, adapter calls the appropriate method (\texttt{performAndPropagateSourceEdit(SrcData)}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, adapter checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed by the bx tool. Then the adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the updated example specific models from the model, receives it, converts it to the UI specific data, and send it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(cont-false)}.}
+	\item {\textbf{Delta Propagation (without continuation)}: After the synchronization button is pressed, view sends (\texttt{propagateChanges(GUID, delta)}) the delta created along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the servlet wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the servlet handles the GUID (checks its existence) and forwards (\texttt{getUIModelsAfterAtomicDelta Propagation(changeData)}) the delta wrapped inside a \texttt{ChangeData} class to the adapter. After converting the delta into example specific data, adapter calls the appropriate method (\texttt{performAndPropagateSourceEdit(SrcData)}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, adapter checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed by the bx tool. Then the adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the updated example specific models from the model, receives it, converts it to the UI specific data, and send it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(cont-false)}.}
 	
 	\item {\textbf{Delta Propagation (with continuation)}: During processing of the data, If continuation (satisfiability of more than one transformation rule) exists, adapter requests for the matching rules (\texttt{getChoices()}) from the bx tool i.e., eMoflon, converts them into the UI specific data, and send it back to the servlet. The servlet forwards it to the view for visualization. After getting the user's choice, view sends (\texttt{propagateUserChoice(GUID, userChoice)}) it along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the servlet wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the servlet handles the GUID (checks its existence) and forwards (\texttt{continueSynchronisation(userChoice)}) the user's choice to the adapter. The adapter forwards it to the bx tool for further processing. Then the adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the updated example specific models from the model, receives it, converts it to the UI specific data, and send it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(cont-true)}.}
 \end{enumerate}
